ingress/echo1.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo1
    tenant: dwpbank
  name: echo1
spec:
  ports:
  - port: 8040
    protocol: TCP
    targetPort: 8080
    nodePort: 30102
  selector:
    app: echo1
  type: NodePort

  
---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: echo1
  name: echo1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echo1
  template:
    metadata:
      labels:
        app: echo1
    spec:
      containers:
      - args:
        - -listen=:8080
        - -text=hello world1
        image: hashicorp/http-echo
        name: echo1
        resources: {}
