ingress/echo4InternalIngress.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo4
    tenant: dwpbank
  name: echo4
spec:
  ports:
  - port: 8043
    protocol: TCP
    targetPort: 8080
    #    nodePort: 30105
  selector:
    app: echo4
  type: NodePort

  
---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: echo4
  name: echo4
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echo4
  template:
    metadata:
      labels:
        app: echo4
    spec:
      containers:
      - args:
        - -listen=:8080
        - -text=hello echo4
        image: hashicorp/http-echo
        name: echo4
        resources: {}
        ports:
         - containerPort: 8080


---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo4
  annotations:
    kubernetes.io/ingress.class: "ingress-nginx-internal"
spec:
  backend:
    serviceName: other
    servicePort: 8080
  rules:
  - http:
      paths:
      - path: /echo4/
        backend:
          serviceName: echo4
          servicePort: 8043
