ingress/ingress_echo1-2.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  backend:
    serviceName: other
    servicePort: 8080
  rules:
#  - host: foo.mydomain.com
#    http:
#      paths:
#      - backend:
#          serviceName: foo
#          servicePort: 8080
  - http:
      paths:
      - path: /bar/
        backend:
          serviceName: echo1
          servicePort: 8040
  - http:
      paths:
      - path: /foo/
        backend:
          serviceName: echo2
          servicePort: 8041
